# lawlingo

./: .gitignore  README.md  get_decisions_hd.py  lawlingo.ipynb  lawlingo.py  migrations_dommar.csv  pyproject.toml  svartlistadeord.txt  svartlistadeordstammar.txt
